# LambdaStar-ocaml

./: Makefile  README.md  dune-project  lambda_star.opam
dev/: ast.ml  compile.ml  core.ml  dune  interp.ml  lattice.ml  parse.ml  surface.ml  util.ml
dev2/: ast.ml  subtyping.ml
docs/: REFERENCES.md
examples/: prog0.src
execs/: dune  run_compile.ml  run_interp.ml  run_parse.ml
lib/common/: dune  env.ml  lattice.ml  subtyping.ml  type.ml
lib/core/: ast.ml  dune  erase.ml  typecheck.ml  value.ml
lib/driver/: compile.ml  interp.ml
lib/parsing/: parse.ml
lib/surface/: ast.ml  typecheck.ml
test/: dune  run_test.ml
test/basic/: prog0.bbc
